// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bigtable/Cluster setMetadata should provide the proper request options asynchronously 1`] = `
{
  "input": {
    "id": "my-cluster",
    "options": {
      "location": "us-central2-d",
      "nodes": 2,
    },
  },
  "output": {
    "config": {
      "client": "BigtableInstanceAdminClient",
      "gaxOpts": {},
      "method": "partialUpdateCluster",
      "reqOpts": {
        "cluster": {
          "location": "us-central2-d",
          "name": "projects/grape-spaceship-123/instances/i/clusters/my-cluster",
          "serveNodes": 2,
        },
        "updateMask": {
          "paths": [
            "serve_nodes",
            "cluster_config.cluster_autoscaling_config",
          ],
        },
      },
    },
  },
}
`;

exports[`Bigtable/Cluster setMetadata should provide the proper request options asynchronously 2`] = `
{
  "input": {
    "id": "my-cluster",
    "options": {
      "location": "us-central2-d",
      "nodes": 2,
      "storage": "ssd",
    },
  },
  "output": {
    "config": {
      "client": "BigtableInstanceAdminClient",
      "gaxOpts": {},
      "method": "partialUpdateCluster",
      "reqOpts": {
        "cluster": {
          "location": "us-central2-d",
          "name": "projects/grape-spaceship-123/instances/i/clusters/my-cluster",
          "serveNodes": 2,
          "storage": "ssd",
        },
        "updateMask": {
          "paths": [
            "serve_nodes",
            "cluster_config.cluster_autoscaling_config",
          ],
        },
      },
    },
  },
}
`;

exports[`Bigtable/Cluster setMetadata should provide the proper request options asynchronously 3`] = `
{
  "input": {
    "id": "my-cluster",
    "options": {
      "key": "kms-key-name",
      "location": "us-central2-d",
      "nodes": 2,
    },
  },
  "output": {
    "config": {
      "client": "BigtableInstanceAdminClient",
      "gaxOpts": {},
      "method": "partialUpdateCluster",
      "reqOpts": {
        "cluster": {
          "key": "kms-key-name",
          "location": "us-central2-d",
          "name": "projects/grape-spaceship-123/instances/i/clusters/my-cluster",
          "serveNodes": 2,
        },
        "updateMask": {
          "paths": [
            "serve_nodes",
            "cluster_config.cluster_autoscaling_config",
          ],
        },
      },
    },
  },
}
`;

exports[`Bigtable/Cluster setMetadata should provide the proper request options asynchronously 4`] = `
{
  "input": {
    "id": "my-cluster",
    "options": {
      "encryption": {
        "kmsKeyName": "kms-key-name",
      },
      "location": "us-central2-d",
      "nodes": 2,
    },
  },
  "output": {
    "config": {
      "client": "BigtableInstanceAdminClient",
      "gaxOpts": {},
      "method": "partialUpdateCluster",
      "reqOpts": {
        "cluster": {
          "encryption": {
            "kmsKeyName": "kms-key-name",
          },
          "location": "us-central2-d",
          "name": "projects/grape-spaceship-123/instances/i/clusters/my-cluster",
          "serveNodes": 2,
        },
        "updateMask": {
          "paths": [
            "serve_nodes",
            "cluster_config.cluster_autoscaling_config",
          ],
        },
      },
    },
  },
}
`;

exports[`Bigtable/Cluster setMetadata should provide the proper request options asynchronously 5`] = `
{
  "input": {
    "id": "my-cluster",
    "options": {
      "cpuUtilizationPercent": 50,
      "location": "us-central2-d",
      "maxServeNodes": 3,
      "minServeNodes": 2,
    },
  },
  "output": {
    "config": {
      "client": "BigtableInstanceAdminClient",
      "gaxOpts": {},
      "method": "partialUpdateCluster",
      "reqOpts": {
        "cluster": {
          "clusterConfig": {
            "clusterAutoscalingConfig": {
              "autoscalingLimits": {
                "maxServeNodes": 3,
                "minServeNodes": 2,
              },
              "autoscalingTargets": {
                "cpuUtilizationPercent": 50,
              },
            },
          },
          "location": "us-central2-d",
          "name": "projects/grape-spaceship-123/instances/i/clusters/my-cluster",
        },
        "updateMask": {
          "paths": [
            "cluster_config.cluster_autoscaling_config.autoscaling_limits.min_serve_nodes",
            "cluster_config.cluster_autoscaling_config.autoscaling_limits.max_serve_nodes",
            "cluster_config.cluster_autoscaling_config.autoscaling_targets.cpu_utilization_percent",
          ],
        },
      },
    },
  },
}
`;
